Добавление всех файлов